# AudioDiagnostics-Suite

./: .gitignore  CMakeLists.txt  README.md
NEW DESIGEN/app/: globals.css  layout.tsx  page.tsx
NEW DESIGEN/components/audio-diagnostics/: audio-diagnostics.tsx  the-analyzer.tsx  the-probe.tsx
docs/: scaffold-plan.md
modules/shared_core/: CMakeLists.txt  SharedCore.cpp
modules/shared_core/dsp/: AnalysisTypes.h  LowBandFftAnalyzer.cpp  LowBandFftAnalyzer.h
modules/shared_core/ipc/: FileDiscoveryRegistry.cpp  FileDiscoveryRegistry.h  IPCTransport.h  LoopbackTransport.h
modules/shared_ui/: CMakeLists.txt  WebDashboardComponent.cpp  WebDashboardComponent.h
plugins/TheAnalyzer/: CMakeLists.txt
plugins/TheAnalyzer/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/TheProbe/: CMakeLists.txt
plugins/TheProbe/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
web/dashboard/: index.html  package-lock.json  package.json
web/dashboard/src/: main.tsx  styles.css
